--- a/conf/requirements.txt
+++ b/conf/requirements.txt
@@ -1,5 +1,5 @@
 django==1.4
-south
+south==0.7.4
 hadrian
 PIL
 sorl-thumbnail
@@ -16,3 +16,4 @@ django-location
 django-test-utils
 factory_boy
 coverage
+selenium
