--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ python:
 # command to install dependencies
 install: pip install -r conf/requirements.txt
 # command to run tests
-script: ./run_tests.sh
+script: django-admin.py test photo_manager --settings=settings.local
