--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,14 @@ language: python
 python:
   - "2.6"
   - "2.7"
+
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+  - rackup  # start a Web server
+  - sleep 3 # give Web server some time to bind to sockets, etc
+
 # command to install dependencies
 install: pip install -r conf/requirements.txt
 # command to run tests
