fix for issue #88

--- a/conf/requirements.txt
+++ b/conf/requirements.txt
@@ -1,21 +1,18 @@
 django==1.4
 south==0.7.4
-hadrian
-PIL
-sorl-thumbnail
-django-celery
-django-kombu
-django-tastypie
-django-sentry==1.12.1
-django-grappelli
-python-memcached
-sphinx
-django-api-docs
-django-mail-queue
-django-location
-django-test-utils
-factory_boy
-coverage
-selenium
-pep8
-pyflakes
+hadrian==1.1
+PIL==1.1.6
+sorl-thumbnail==11.12
+django-celery==2.5.5
+django-kombu==0.9.4
+django-tastypie==0.9.11
+python-memcached==1.48
+sphinx==1.1.3
+django-api-docs==1.1.1
+django-mail-queue==1.1.0
+django-location==0.1.4
+django-test-utils==0.3
+factory_boy==1.1.3
+coverage==3.5.2
+selenium==2.21.2
+pyflakes==0.5.0
