--- a/conf/requirements.txt
+++ b/conf/requirements.txt
@@ -17,7 +17,10 @@ selenium==2.24.0
 pyflakes==0.5.0
 django-taggit==0.9.3
 django-crispy-forms==1.1.4
-django-debug-toolbar==0.9.1
+django-debug-toolbar==0.9.4
 django-haystack==1.2.7
 whoosh==2.4.1
+celery==2.5.5
+Werkzeug==0.8.3
+django-extensions==0.9
 
