--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: python
 python:
   - "2.6"
   - "2.7"
+env:
+  - DJANGO=1.2.7
+  - DJANGO=1.3.2
+  - DJANGO=1.4.1
 
 before_script:
   - "export DISPLAY=:99.0"
@@ -10,7 +14,9 @@ before_script:
   - sleep 3 # give Web server some time to bind to sockets, etc
 
 # command to install dependencies
-install: pip install -r conf/requirements.txt --use-mirrors
+install:
+  - pip install -q Django==$DJANGO --use-mirrors
+  - pip install -r conf/requirements.txt --use-mirrors
 # command to run tests
 script:
   - python manage.py test photo_manager --settings=settings.local
