--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,35 @@
-*.pyc
-upload/
-settings/local.py
-settings/production.py
-settings/staging.py
 dev.db
 uploads
 .coverage
 reports/coverage_html
-.idea/
 whoosh/
+
+
+*.py[co]
+
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+
+#Translations
+*.mo
+
+#Mr Developer
+.mr.developer.cfg
+.idea
