Add docs to manifest

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,5 @@ include README.md AUTHORS.txt LICENSE.txt
 recursive-include fotochest/templates *.*
 recursive-include fotochest/static *.*
 recursive-inlcude fotochest/themes *.*
+recursive-include fotochest/lib *.*
+recursive-include docs/ *.*
