--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,3 +4,6 @@ recursive-include fotochest/static *.*
 recursive-inlcude fotochest/themes *.*
 recursive-include fotochest/lib *.*
 recursive-include docs/ *.*
+recursive-include fotochest/administrator/fixtures *.*
+recursive-include fotochest/administrator/static *.*
+recursive-include fotochest/administrator/templates *.*
