--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
 
 # command to install dependencies
 install:
-  - pip install requirements.txt
+  - pip install -r requirements.txt
 
 script:
   - ./run_tests.sh
