Adding fixes. and constance.

--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,4 @@ django-site-notifications==0.1
 django-downtime==0.2
 django-bootstrap-static==2.0.2
 django-braces==0.1.7
+django-constance[database]==0.6
