--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ django-kombu==0.9.4
 django-tastypie==0.9.12
 python-memcached==1.48
 sphinx==1.1.3
+django-site-notifications==0.3
+django-downtime==0.3
 django-api-docs==1.1.1
 django-mail-queue==1.5.1
 django-test-utils==0.3
