--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,26 @@
 django==1.5.5
-south==0.8.2
-hadrian==1.1.5
-Pillow==2.2.1
+south==0.8.4
+git+ssh://git@github.com/dstegelman/django-locations.git@feature/upgrades#egg=locations
+Pillow==2.4.0
 sorl-thumbnail==11.12
-django-celery==3.0.23
+django-celery==3.1.10
 django-kombu==0.9.4
-django-tastypie==0.9.12
-python-memcached==1.48
-sphinx==1.1.3
-django-site-notifications==0.3
-django-downtime==0.3
-django-mail-queue==2.0.2
-django-test-utils==0.3
-factory_boy==1.1.3
-coverage==3.7
-selenium==2.24.0
-pyflakes==0.5.0
-django-taggit==0.10
+python-memcached==1.53
+sphinx==1.2.2
+factory_boy==2.3.1
+coverage==3.7.1
+selenium==2.42.1
 django-crispy-forms==1.4.0
 django-debug-toolbar==0.9.4
 django-haystack==2.1.0
-whoosh==2.5.4
-celery==3.0.24
+whoosh==2.5.7
+celery==3.1.11
 Werkzeug==0.9.4
-django-extensions==1.2.4
+django-extensions==1.3.7
 django-bootstrap-static==2.0.2
-django-braces==1.2.2
+django-braces==1.4.0
 django-constance[database]==0.6
 django-chosen==0.1
-psycopg2==2.5.1
+mysql-python
+pip-tools
+django-picklefield
