--- a/salt/roots/salt/supervisor/supervisord.conf
+++ b/salt/roots/salt/supervisor/supervisord.conf
@@ -28,7 +28,15 @@ serverurl=unix:///var/run//supervisor.sock ; use a unix:// URL  for a unix socke
 files = /etc/supervisor/conf.d/*.conf
 
 [program:celery]
-command=/home/vagrant/.virtualenvs/fotochest/bin/python /home/vagrant/fotochest/manage.py celeryd -B -E --concurrency=8 --loglevel=info --settings=settings.local
+command=/home/vagrant/.virtualenvs/fotochest/bin/python /home/vagrant/fotochest/manage.py celeryd -B --concurrency=1 --loglevel=info --settings=settings.local
+directory=/home/vagrant/fotochest
+user=vagrant
+autostart=true
+autorestart=true
+redirect_stderr=True
+
+[program:gunicorn]
+command=/home/vagrant/.virtualenvs/fotochest/bin/python gunicorn fotochest.wsgi:application -w 1 -b 0.0.0.0:8082
 directory=/home/vagrant/fotochest
 user=vagrant
 autostart=true
