--- a/salt/roots/salt/supervisor/supervisord.conf
+++ b/salt/roots/salt/supervisor/supervisord.conf
@@ -36,7 +36,7 @@ autorestart=true
 redirect_stderr=True
 
 [program:gunicorn]
-command=/home/vagrant/.virtualenvs/fotochest/bin/python gunicorn fotochest.wsgi:application -w 1 -b 0.0.0.0:8082
+command=/home/vagrant/.virtualenvs/fotochest/bin/gunicorn wsgi:application -w 1 -b 0.0.0.0:8082
 directory=/home/vagrant/fotochest
 user=vagrant
 autostart=true
