--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ install:
 # command to run tests
 
 script:
-  - python manage.py test photo_manager --settings=settings.local
+  - python manage.py test --settings=settings.local
 
