--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 django>=1.6,<1.7
 south==0.8.4
-git+ssh://git@github.com/dstegelman/django-locations.git@master#egg=locations
+git+http://github.com/dstegelman/django-locations.git@master#egg=locations
 Pillow==2.4.0
 sorl-thumbnail==11.12
 django-celery==3.1.10
