--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ Werkzeug==0.9.6
 django-extensions==1.3.8
 django-bootstrap-static==2.0.2
 django-braces==1.4.0
-django-constance[database]==0.6
+git+http://github.com/comoga/django-constance.git@master
 django-chosen==0.1
 pip-tools
 django-picklefield
