--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,30 @@
 django>=1.6,<1.7
 south==0.8.4
 git+http://github.com/dstegelman/django-locations.git@master#egg=locations
-Pillow==2.4.0
-sorl-thumbnail==11.12
-django-celery==3.1.10
+Pillow>=2.5.0,<3.0.0
+sorl-thumbnail==11.12.1b
+django-celery==3.1.16
 django-kombu==0.9.4
 python-memcached==1.53
 sphinx==1.2.2
 factory_boy==2.4.1
 coverage==3.7.1
 django-crispy-forms==1.4.0
-django-debug-toolbar==0.9.4
-django-haystack==2.1.0
+django-haystack==2.3.1
 whoosh==2.5.7
 celery==3.1.12
-Werkzeug==0.9.6
-django-extensions==1.3.8
 django-bootstrap-static==2.0.2
 django-braces==1.4.0
 git+http://github.com/comoga/django-constance.git@master
 django-chosen==0.1
-pip-tools
+
 django-picklefield
 gunicorn==18.0
+mysql-python
+librabbitmq
+
+# Local App Deps
+django-devserver
+pip-tools
+Werkzeug==0.9.6
+django-debug-toolbar==0.9.4
