--- a/roles/web/handlers/main.yml
+++ b/roles/web/handlers/main.yml
@@ -1,9 +1,5 @@
 ---
 
-- name: Restart Rabbit
+- name: Restart Redis
   sudo: yes
-  service: name=rabbitmq-server state=restarted
-
-- name: Restart Memcached
-  sudo: yes
-  service: name=memcached state=restarted
+  service: name=redis-server state=restarted
