--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ Pillow>=2.5.0,<3.0.0
 sorl-thumbnail==11.12.1b
 django-celery==3.1.16
 django-kombu==0.9.4
-python-memcached==1.53
 sphinx==1.2.2
 factory_boy==2.4.1
 coverage==3.7.1
@@ -21,7 +20,7 @@ django-chosen==0.1
 django-picklefield
 gunicorn==18.0
 mysql-python
-librabbitmq
+redis_cache==0.13.0
 
 # Local App Deps
 django-devserver
