--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ install:
 # command to run tests
 
 script:
-  - python manage.py test --settings=fotochest.settings.local
+  - python manage.py test --settings=fotochest.settings.test
 
