--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ coverage==3.7.1
 django-crispy-forms==1.4.0
 django-haystack==2.3.1
 whoosh==2.5.7
-celery==3.1.12
+celery[redis]==3.1.12
 django-bootstrap-static==2.0.2
 django-braces==1.4.0
 git+http://github.com/comoga/django-constance.git@master
