--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ coverage==3.7.1
 django-crispy-forms==1.4.0
 django-haystack==2.3.1
 whoosh==2.5.7
-celery[redis]==3.1.12
+celery[redis]==3.1.16
 django-bootstrap-static==2.0.2
 django-braces==1.4.0
 git+http://github.com/comoga/django-constance.git@master
@@ -20,6 +20,7 @@ django-picklefield
 gunicorn==18.0
 mysql-python
 django-redis_cache==0.13.0
+hiredis
 
 # Local App Deps
 django-devserver
