--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
 django>=1.7.1,<1.8
 git+http://github.com/dstegelman/django-locations.git@master#egg=locations
 Pillow>=2.5.0,<3.0.0
-sorl-thumbnail==11.12.1b
+sorl-thumbnail==12.1c
 django-celery==3.1.16
 django-kombu==0.9.4
-sphinx==1.2.2
+sphinx==1.3b1
 factory_boy==2.4.1
 coverage==3.7.1
 django-crispy-forms==1.4.0
-celery[redis]==3.1.16
+celery[redis]==3.1.17
 django-bootstrap-static==2.0.2
 django-braces==1.4.0
 git+http://github.com/comoga/django-constance.git@master
 django-chosen==0.1
 
 django-picklefield==0.3.1
-gunicorn==18.0
+gunicorn==19.1.1
 mysql-python==1.2.5
 django-redis_cache==0.13.0
 hiredis==0.1.5
