Fix up wsgi and celery references.

--- a/roles/web/files/supervisord.conf
+++ b/roles/web/files/supervisord.conf
@@ -27,6 +27,14 @@ serverurl=unix:///var/run//supervisor.sock ; use a unix:// URL  for a unix socke
 [include]
 files = /etc/supervisor/conf.d/*.conf
 
+[program:fotochest_gunicorn]
+command=/home/vagrant/.virtualenvs/fotochest/bin/gunicorn wsgi:application -b 0.0.0.0:9000
+directory=/home/vagrant/fotochest/fotochest
+user=vagrant
+autostart=true
+autorestart=true
+redirect_stderr=True
+
 
 [program:fotochest_celery]
 command=/home/vagrant/.virtualenvs/fotochest/bin/python /home/vagrant/fotochest/manage.py celeryd --concurrency=2 --loglevel=info
