--- a/roles/web/files/supervisord.conf
+++ b/roles/web/files/supervisord.conf
@@ -28,8 +28,8 @@ serverurl=unix:///var/run//supervisor.sock ; use a unix:// URL  for a unix socke
 files = /etc/supervisor/conf.d/*.conf
 
 [program:fotochest_gunicorn]
-command=/home/vagrant/.virtualenvs/fotochest/bin/gunicorn wsgi:application -b 0.0.0.0:9000
-directory=/home/vagrant/fotochest/fotochest
+command=/home/vagrant/.virtualenvs/fotochest/bin/gunicorn wsgi:application --conf=gunicorn.conf.py
+directory=/home/vagrant/fotochest
 user=vagrant
 autostart=true
 autorestart=true
