--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,5 @@
 [pytest]
 DJANGO_SETTINGS_MODULE=fotochest.settings.test
+flakes-ignore =
+    settings/*.py ALL
+    __init__.py ImportStarUsed UnusedImport
