--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,8 @@ django-crispy-forms==1.4.0
 celery[redis]==3.1.17
 django-bootstrap-static==2.0.2
 django-braces==1.4.0
-git+http://github.com/jezdez/django-constance.git@master
+django-constance==1.0
 django-chosen==0.1
-
 django-picklefield==0.3.1
 gunicorn==19.1.1
 mysql-python==1.2.5
