--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,26 @@
 django>=1.7.1,<1.8
 git+http://github.com/dstegelman/django-locations.git@master#egg=locations
 Pillow>=2.5.0,<3.0.0
-sorl-thumbnail==12.1c
+sorl-thumbnail==12.2
 django-celery==3.1.16
-django-kombu==0.9.4
 factory_boy==2.4.1
 coverage==3.7.1
 django-crispy-forms==1.4.0
 celery[redis]==3.1.17
 django-bootstrap-static==2.0.2
 django-braces==1.4.0
-django-constance==1.0
+django-constance==1.0.1
 django-chosen==0.1
 django-picklefield==0.3.1
-gunicorn==19.1.1
-mysql-python==1.2.5
+gunicorn==19.2.1
+mysqlclient==1.3.5
 django-redis_cache==0.13.0
-hiredis==0.1.5
+hiredis==0.1.6
 
 # Local App Deps
 pip-tools==0.3.5
-Werkzeug==0.9.6
+Werkzeug==0.10.1
 django-debug-toolbar==0.9.4
 pytest==2.6.4
-pytest-django==2.7.0
+pytest-django==2.8.0
 pytest-flakes==0.2
