Add workon/virtualenvwrapper #220.

--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -16,6 +16,8 @@
 
 - include: images.yml
 
+- name: Install Virtualenvwrapper
+  pip: name=virtualenvwrapper
 
 - name: Build Project Virtualenvs
   command: virtualenv --python=python3 /home/vagrant/.virtualenvs/fotochest creates=/home/vagrant/.virtualenvs/fotochest
@@ -25,3 +27,10 @@
 
 - name: Ownership of Virtualenvs
   file: path=/home/vagrant/.virtualenvs/fotochest owner=vagrant group=vagrant recurse=True
+
+- name: Setup Virtualenv Projects
+  shell: . /usr/local/bin/virtualenvwrapper.sh && setvirtualenvproject /home/vagrant/.virtualenvs/fotochest /home/vagrant/fotochest
+  args:
+    executable: /bin/bash
+  with_items: projects
+  ignore_errors: True
