Remove django-celery #222.

--- a/roles/bootstrap/tasks/main.yml
+++ b/roles/bootstrap/tasks/main.yml
@@ -1,6 +1,9 @@
 - name: update apt cache
   apt: update_cache=yes
 
+- name: Upgrade all Packages
+  apt: upgrade=yes
+
 - name: install core packages
   apt: pkg={{ item }} state=installed
   with_items:
