--- a/roles/web/files/supervisord.conf
+++ b/roles/web/files/supervisord.conf
@@ -27,18 +27,10 @@ serverurl=unix:///var/run//supervisor.sock ; use a unix:// URL  for a unix socke
 [include]
 files = /etc/supervisor/conf.d/*.conf
 
-[program:fotochest_gunicorn]
-command=/home/vagrant/.virtualenvs/fotochest/bin/gunicorn wsgi:application --conf=gunicorn.conf.py
-directory=/home/vagrant/fotochest
-user=vagrant
-autostart=true
-autorestart=true
-redirect_stderr=True
-
-
 [program:fotochest_celery]
-command=/home/vagrant/.virtualenvs/fotochest/bin/python /home/vagrant/fotochest/manage.py celeryd --concurrency=2 --loglevel=info
+command=/home/vagrant/.virtualenvs/fotochest/bin/celery -A fotochest worker -l info
 directory=/home/vagrant/fotochest
+environment=DJANGO_SETTINGS_MODULE=fotochest.settings.local
 user=vagrant
 autostart=true
 autorestart=true
