--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 django>=1.7.1,<1.8
-git+http://github.com/dstegelman/django-locations.git@master#egg=locations
+git+http://github.com/dstegelman/django-locations.git@0.2.0#egg=locations
 Pillow>=2.5.0,<3.0.0
 sorl-thumbnail==12.2
-factory_boy==2.4.1
-coverage==3.7.1
 django-crispy-forms==1.4.0
 celery[redis]==3.1.17
 django-bootstrap-static==2.0.2
@@ -25,3 +23,5 @@ django-debug-toolbar==0.9.4
 pytest==2.6.4
 pytest-django==2.8.0
 pytest-flakes==0.2
+factory_boy==2.4.1
+coverage==3.7.1
