--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 django>=1.7.1,<1.8
-git+http://github.com/dstegelman/django-locations.git@0.2.0#egg=locations
+django-locations-base==0.2.2
 Pillow>=2.5.0,<3.0.0
 sorl-thumbnail==12.2
 django-crispy-forms==1.4.0
