--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 
 python:
   - "2.7"
+  - "3.3"
   - "3.4"
 
 # command to install dependencies
@@ -11,4 +12,4 @@ install:
 # command to run tests
 
 script:
-  - py.test --flakes  -m 'not locations'
+  - py.test --flakes
