--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ djangorestframework==3.1.1
 markdown==2.6.1
 django-picklefield==0.3.1
 gunicorn==19.3.0
-mysqlclient==1.3.6
+#mysqlclient==1.3.6
 django-redis_cache==0.13.0
 hiredis==0.1.6
 
